@@ -1,4 +1,4 @@
-Copyright (C) 2004 Paul Duncan
+Copyright (C) 2004, 2005 Paul Duncan <pabs@pablotron.org>
  
 Permission is hereby granted, free of charge, to any person obtaining a copy
 of this software and associated documentation files (the "Software"), to
