@@ -114,3 +114,9 @@
 
 * Sun May 29 21:12:16 2005, pabs <pabs@pablotron.org>
   * rubilicious.rb: add opt parameter to Rubilicious::new
+
+* Sun May 29 21:23:06 2005, pabs <pabs@pablotron.org>
+  * rubilicious.rb: better documentation for #new opt argument
+  * rubilicious.rb: del.icio.us => Delicious (except in URLs)
+  * rubilicious.rb: copyright year update
+  * COPYING: ditto
